# SIH_FloatChat

./: README.md  argo_float_results.txt  main.py  pyproject.toml  test.py  test_integration.py  test_query_cleaning.py
core/: analysis.py  csv_to_neon.py  data_conversion.py  data_ingestion.py  db_setup.py  executor.py  query_engine.py
data/csv/: 1901346_2019_06_nodc_R1901346_169_argo_data.csv  1901346_2019_06_nodc_R1901346_170_argo_data.csv  1901346_2019_07_nodc_R1901346_171_argo_data.csv  1901346_2019_07_nodc_R1901346_172_argo_data.csv  1901346_2019_07_nodc_R1901346_173_argo_data.csv  1901346_2019_08_nodc_R1901346_174_argo_data.csv  1901346_2019_08_nodc_R1901346_175_argo_data.csv  1901346_2019_08_nodc_R1901346_176_argo_data.csv  1901346_2019_09_nodc_R1901346_177_argo_data.csv  1901346_2019_09_nodc_R1901346_178_argo_data.csv  1901346_2019_09_nodc_R1901346_179_argo_data.csv  1901346_2019_10_nodc_R1901346_180_argo_data.csv  1901346_2019_10_nodc_R1901346_181_argo_data.csv  1901346_2019_10_nodc_R1901346_182_argo_data.csv  1901346_2019_11_nodc_R1901346_183_argo_data.csv  1901346_2019_11_nodc_R1901346_184_argo_data.csv  1901346_2019_11_nodc_R1901346_185_argo_data.csv  1901346_2019_12_nodc_R1901346_186_argo_data.csv  1901346_2019_12_nodc_R1901346_187_argo_data.csv  1901346_2019_12_nodc_R1901346_188_argo_data.csv  1901346_2020_01_nodc_R1901346_189_argo_data.csv  1901346_2020_01_nodc_R1901346_190_argo_data.csv  1901346_2020_01_nodc_R1901346_191_argo_data.csv  1901346_2020_01_nodc_R1901346_192_argo_data.csv  1901346_2020_02_nodc_R1901346_193_argo_data.csv  (+857 more)
(+650 files in other folders)
